minor styling changes to the menu page

--- a/indexFetch.html
+++ b/indexFetch.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HungryForFood</title>
+    <title>Thai Garden</title>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -13,15 +13,15 @@
         <div class="grid__row grid__row--sm">
             <div class="grid__item"><h1><img src="images/ThaiGarden-Logo@2x.png"/></h1></div>
             <h2> ORDER ONLINE NOW </h2>
-            <div class="grid__item"><a href="https://www.google.ie/?gws_rd=ssl">Blackrock <img src="images/chevron.png"></a></div>
+            <div class="grid__item"><a href="./menuPage/menu.html">Blackrock <img src="images/chevron.png"></a></div>
             <hr>
-            <div class="grid__item"><a href="https://www.google.ie/?gws_rd=ssl">Dun Laoghaire<img src="images/chevron.png"></a></div>
+            <div class="grid__item"><a href="./menuPage/menu.html">Dun Laoghaire<img src="images/chevron.png"></a></div>
             <hr>
-            <div class="grid__item"><a href="https://www.google.ie/?gws_rd=ssl">Kimmage<img src="images/chevron.png"></a></div>
+            <div class="grid__item"><a href="./menuPage/menu.html">Kimmage<img src="images/chevron.png"></a></div>
             <hr>
-            <div class="grid__item"><a href="https://www.google.ie/?gws_rd=ssl">Rathmines<img src="images/chevron.png"></a></div>
+            <div class="grid__item"><a href="./menuPage/menu.html">Rathmines<img src="images/chevron.png"></a></div>
             <hr>
-            <div class="grid__item"><a href="https://www.google.ie/?gws_rd=ssl">Tempelogue<img src="images/chevron.png"></a></div>
+            <div class="grid__item"><a href="./menuPage/menu.html">Tempelogue<img src="images/chevron.png"></a></div>
         </div>
     </div>
 </div>
