--- a/menuPage/menu.html
+++ b/menuPage/menu.html
@@ -33,9 +33,9 @@
                             var menu_option = document.getElementsByClassName("menu_option");
                             menu_option[counter].innerHTML += '<div class="menu_option_text">' +
                                 '<p class="menu_option_name">' + menu[i].Items[j].Title + '</p>' +
-                                '<p class="menu_option_description">' + menu[i].Items[j].Description + '</p>' +
+                                '<p class="menu_option_description">' + menu[i].Items[j].Description + '</p>' + '<hr>' +
                                 '</div>' +
-                                '<div class="menu_option_nonText">' +
+                                '<div class="enu_option_nonText">' +
                                 '<p class="menu_option_price">' + menu[i].Items[j].Price + '</p>' +
                                 '</div>';
                             counter ++;
