--- a/menuPage/menu.html
+++ b/menuPage/menu.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-<<<<<<< HEAD
     <script src="./populateMenu.js"></script>
+    <script src="../chooseOrderItem/addItem.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <link type="text/html" href="../chooseOrderItem/addItem.html">
     <link rel="stylesheet" type="text/css" href="./menu.css">
+    <link rel="stylesheet" type="text/css" href="../chooseOrderItem/addItem.css">
     <div class="title">
         <title>Thai Garden</title>
     </div>
