fixing merge issues

--- a/indexFetch.html
+++ b/indexFetch.html
@@ -13,18 +13,22 @@
         <div class="grid__row grid__row--sm">
             <div class="grid__item"><h1><img src="images/ThaiGarden-Logo@2x.png"/></h1></div>
             <h2> ORDER ONLINE NOW </h2>
-            <div class="grid__item"><a href="./menuPage/menu.html">Blackrock <img src="images/chevron.png"></a></div>
+            <div class="grid__item"><a href="./menuPage/menu.html"><label>Blackrock</label><img
+                    src="images/chevron.png"></a></div>
             <hr>
-            <div class="grid__item"><a href="./menuPage/menu.html">Dun Laoghaire<img src="images/chevron.png"></a></div>
+            <div class="grid__item"><a href="./menuPage/menu.html"><label>Dun Laoghaire</label><img
+                    src="images/chevron.png"></a></div>
             <hr>
-            <div class="grid__item"><a href="./menuPage/menu.html">Kimmage<img src="images/chevron.png"></a></div>
+            <div class="grid__item"><a href="./menuPage/menu.html"><label>Kimmage</label><img src="images/chevron.png"></a>
+            </div>
             <hr>
-            <div class="grid__item"><a href="./menuPage/menu.html">Rathmines<img src="images/chevron.png"></a></div>
+            <div class="grid__item"><a href="./menuPage/menu.html"><label>Rathmines</label><img
+                    src="images/chevron.png"></a></div>
             <hr>
-            <div class="grid__item"><a href="./menuPage/menu.html">Tempelogue<img src="images/chevron.png"></a></div>
+            <div class="grid__item"><a href="./menuPage/menu.html"><label>Tempelogue</label><img
+                    src="images/chevron.png"></a></div>
         </div>
     </div>
 </div>
-
 </body>
 </html>
