--- a/chooseOrderItem/addItem.html
+++ b/chooseOrderItem/addItem.html
@@ -5,23 +5,23 @@
             <div class="grid__item1">
                 <label>
                    <!--<a> <img src="../images/Selector%20-%20Single%20Unselected%203%20Copy@2x.png"> &nbsp </a>-->
-                    <input type="radio" name="option" value="steamed" checked/>Steamed Rice<br>
+                    <input type="radio" value="steamed rice" checked/>Steamed Rice<br>
                 </label>
                 <label>
                     <!--<a><img src="../images/Selector%20-%20Single%20Unselected%203%20Copy@2x.png"> &nbsp </a>-->
-                    <input type="radio" name="option" value="brown"/> Brown Rice<br>
+                    <input type="radio" value="brown rice"/> Brown Rice<br>
                 </label>
                 <label>
                     <!--<a> <img src="../images/Selector%20-%20Single%20Unselected%203%20Copy@2x.png"> &nbsp </a>-->
-                    <input type="radio" name="option" value="coconut"/> Coconut Rice<br>
+                    <input type="radio" value="coconut rice"/> Coconut Rice<br>
                 </label>
                 <label>
                     <!--<a>  <img src="../images/Selector%20-%20Single%20Unselected%203%20Copy@2x.png"> &nbsp </a>-->
-                    <input type="radio" name="option" value="rice"/> Rice Noodle<br>
+                    <input type="radio" value="rice noodle"/> Rice Noodle<br>
                 </label>
                 <label>
                     <!--<a>  <img src="../images/Selector%20-%20Single%20Unselected%203%20Copy@2x.png"> &nbsp </a>-->
-                    <input type="radio" name="option" value="egg"/> Egg Noodle<br>
+                    <input type="radio" value="egg noodle"/> Egg Noodle<br>
                 </label>
             </div>
             <div class="grid__item1"><br><br>
@@ -34,7 +34,7 @@
             <div class="grid__item1">
             <form id='myform' method='POST' action='#'>
                 <input type='button' value='-' class='qtyminus' onclick="minusNum(this)" field='quantity' />
-                <input type='number' contenteditable="false" name='quantity' value='0' min="0" class='qty' />
+                <input type='number' contenteditable="false" name='quantity' value='1' min="0" class='qty' />
                 <input type='button' value='+' class='qtyplus' onclick="addNum(this)" field='quantity' />
             </form></div>
             <div class="grid__item1"><button type="button">Add to Cart</button></div>
