--- a/menuPage/menu.html
+++ b/menuPage/menu.html
@@ -22,83 +22,66 @@
     </div>
     <div class="menu_container"></div>
 </div>
-    <div class="side_border"></div>
-    <div class="checkout_container">
-        <img src="../images/close.png">
-        <p>Your Order</p>
-        <div class="order_container">
-            <div class="order_list"></div>
-            <div class="order_coupon"></div>
-            <div class="order_total"></div>
-        </div>
-        <div class="side_border"></div>
-        <div class="checkout_container">
-            <img src="../images/close.png">
-            <p>Your Order</p>
-            <div class="order_container">
-                <div class="order_list"></div>
-                <div>
-                    <div id="addCoupon">
-                        <button onclick="populateCoupon()">Add Coupon</button>
-                    </div>
-                    <div id="displayCoupon" style="display: none">
-                        <div class="order_coupon"></div>
-                    </div>
-                </div>
-                <div class="order_total"></div>
-             </div>
-
-            <button id="proceedToCheckoutButton" onclick="displayCheckout();" style="display: none">Proceed to Checkout</button>
-        <div id="checkout" style="display: none">
-            <p>Checkout</p>
-            <div class="checkout_container_option">
-                <div class="checkout_container_option_for">
-                    <p>Order for</p>
-                    <form>
-                        <input type="radio" name="orderFor" value="collection" checked> Collection<br>
-                        <input type="radio" name="orderFor" value="delivery"> Delivery<br>
-                    </form>
-                </div>
-                <div class="checkout_container_option_collect">
-                    <p>Collect at</p>
-                    <select name="collectionTime">
-                        <option value="ASAP">ASAP</option>
-                        <option value=".5">30 min</option>
-                        <option value="1">1 Hour</option>
-                        <option value="1.5">1 Hour 30 min</option>
-                        <option value="2">2 Hours</option>
-                    </select>
-                </div>
-                <div class="checkout_container_option_pay">
-                    <p>Pay with</p>
-                    <form>
-                        <input type="radio" name="payWith" value="cash" checked> Cash<br>
-                        <input type="radio" name="payWith" value="card">Credit/Debit Card<br>
-                    </form>
-                </div>
-                <div class="checkout_container_option_name">
-                    <label>Name</label>
-                    <input type="text" required="required">
-                </div>
-                <div class="checkout_container_option_mobile">
-                    <label>Mobile No.</label>
-                    <input type="number">
-                </div>
-                <div class="checkout_container_option_confirm">
-                    <p onclick="cancelOrder">Cancel</p>
-                    <button onclick="confirmOrder()">Confirm</button>
-                </div>
+<div class="side_border"></div>
+<div class="checkout_container">
+    <img src="../images/close.png">
+    <p>Your Order</p>
+    <div class="order_container">
+        <div class="order_list"></div>
+        <div>
+            <div id="addCoupon">
+                <button id="coupon" onclick="populateCoupon()">Add Coupon</button>
+            </div>
+            <div id="displayCoupon" style="display: none">
+                <div class="order_coupon"></div>
             </div>
         </div>
+        <div class="order_total"></div>
     </div>
-<script>
-    var $window = $(window),
-            $stickyEl = $('#checkout_container'),
-            elTop = $stickyEl.offset().top;
 
-    $window.scroll(function() {
-        $stickyEl.toggleClass('sticky', $window.scrollTop() > elTop);
-    });
-</script>
+    <button id="proceedToCheckoutButton" onclick="displayCheckout();" style="display: none">Proceed to Checkout</button>
+    <hr>
+    <div id="checkout" style="display: none">
+        <p id="checkout1">Checkout</p>
+        <div class="checkout_container_option">
+            <div class="checkout_container_option_for">
+                <p>Order for</p>
+                <form>
+                    <input type="radio" name="orderFor" value="collection" checked> Collection<br>
+                    <input type="radio" name="orderFor" value="delivery"> Delivery<br>
+                </form>
+            </div>
+            <div class="checkout_container_option_collect">
+                <p>Collect at</p>
+                <select name="collectionTime">
+                    <option value="ASAP">ASAP</option>
+                    <option value=".5">30 min</option>
+                    <option value="1">1 Hour</option>
+                    <option value="1.5">1 Hour 30 min</option>
+                    <option value="2">2 Hours</option>
+                </select>
+            </div>
+            <div class="checkout_container_option_pay">
+                <p>Pay with</p>
+                <form>
+                    <input type="radio" name="payWith" value="cash" checked> Cash<br>
+                    <input type="radio" name="payWith" value="card">Credit/Debit Card<br>
+                </form>
+            </div>
+            <div class="checkout_container_option_name">
+                <label>Name</label>
+                <input type="text" required="required" id ="name">
+            </div>
+            <div class="checkout_container_option_mobile">
+                <label>Mobile No.</label>
+                <input type="tel" id="contact">
+            </div>
+            <div class="checkout_container_option_confirm">
+                <p onclick="cancelOrder">Cancel</p>
+                <button onclick="confirmOrder()">Confirm</button>
+            </div>
+    </div>
+</div>
+</div>
 </body>
 </html>
