--- a/startPage/indexFetch.html
+++ b/startPage/indexFetch.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Thai Garden</title>
+    <script src="./startPage.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -13,19 +14,19 @@
         <div class="grid__row grid__row--sm">
             <div class="grid__item"><h1><img src="../images/ThaiGarden-Logo@2x.png"/></h1></div>
             <h2> ORDER ONLINE NOW </h2>
-            <div class="grid__item"><a href="../menuPage/menu.html"><label>Blackrock</label><img
+            <div class="grid__item"><a href="../menuPage/menu.html" onclick="saveLocation('Blackrock')"><label>Blackrock</label><img
                     src="../images/chevron.png"></a></div>
             <hr>
-            <div class="grid__item"><a href="../menuPage/menu.html"><label>Dun Laoghaire</label><img
+            <div class="grid__item"><a href="../menuPage/menu.html" onclick="saveLocation('Dun Laoghaire')"><label>Dun Laoghaire</label><img
                     src="../images/chevron.png"></a></div>
             <hr>
-            <div class="grid__item"><a href="../menuPage/menu.html"><label>Kimmage</label><img src="../images/chevron.png"></a>
+            <div class="grid__item"><a href="../menuPage/menu.html" onclick="saveLocation('Kimmage')"><label>Kimmage</label><img src="../images/chevron.png"></a>
             </div>
             <hr>
-            <div class="grid__item"><a href="../menuPage/menu.html"><label>Rathmines</label><img
+            <div class="grid__item"><a href="../menuPage/menu.html" onclick="saveLocation('Rathmines')"><label>Rathmines</label><img
                     src="../images/chevron.png"></a></div>
             <hr>
-            <div class="grid__item"><a href="../menuPage/menu.html"><label>Tempelogue</label><img
+            <div class="grid__item"><a href="../menuPage/menu.html" onclick="saveLocation('Tempelogue')"><label>Tempelogue</label><img
                     src="../images/chevron.png"></a></div>
         </div>
     </div>
