fixing paddys awful style

--- a/menuPage/menu.html
+++ b/menuPage/menu.html
@@ -25,8 +25,8 @@
     <div class="container">
         <div class="header">
             <img src="../images/ThaiGarden-Logo@2x.png" class="image">
-            <p class="location"></p>
-            <a href="../startPage/indexFetch.html">Change</a>
+            <p id="locationSelected" class="location"></p>
+            <a id="loc" href="../startPage/indexFetch.html">Change</a>
             <img src="../images/Shopping%20Basket%20icon.png" class="basket">
         </div>
         <div class="menu_container"></div>
