--- a/menuPage/menu.html
+++ b/menuPage/menu.html
@@ -40,7 +40,7 @@
                 <div>
                     <div id="addCoupon" >
                         <label>Add Coupon</label>
-                        <input type="text">
+                        <input type="text" id="inputCoupon">
                         <button id="checkCoupon" onclick="thaiFood.cart.populateCoupon()">Apply</button>
                     </div>
                     <div id="displayCoupon" style="display: none">
