--- a/menuPage/menu.html
+++ b/menuPage/menu.html
@@ -77,12 +77,12 @@
                             <input type="text">
                         </div>
                         <div class="checkout_container_option_for_delivery_choice">
-                            <label>Town:</label>
+                            <label id="town">Town:</label>
                             <input type="text">
                         </div>
                         <div class="checkout_container_option_for_delivery_choice">
-                            <label>County:</label>
-                            <input type="text">
+                            <label id="town1">County:</label>
+                            <input name="text">
                         </div>
                     </form>
                 </div>
@@ -128,7 +128,7 @@
                 </div>
                 <div class="checkout_container_option_name">
                     <label>Name</label>
-                    <input type="text" required="required" id="name">
+                    <input type="text" id="name" >
 
                 </div>
                 <div class="checkout_container_option_mobile">
